<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deepgrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/backId"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/doneTxt"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:padding="16dp"
        android:text="@string/editP"
        android:textColorHint="@color/m3_default_color_primary_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullName_IdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_bold"
                android:hint="@string/fullNameEditable"
                android:textSize="24sp"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconDrawable="@drawable/baseline_cancel_24"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullName_IdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/devRole_IdLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_semibold"
                android:hint="@string/devRoleEditable"
                android:textSize="18sp"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullName_IdLayout">

                <AutoCompleteTextView
                    android:id="@+id/devRole_IdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/role" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_IdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/emailEditable"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconDrawable="@drawable/baseline_cancel_24"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/devRole_IdLayout"
                app:startIconCheckable="false"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/Light_red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_IdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/education_IdLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/educationEditable"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_IdLayout"
                app:startIconCheckable="false"
                app:startIconDrawable="@drawable/baseline_school_24">

                <AutoCompleteTextView
                    android:id="@+id/education_IdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/education" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gitHub_IdLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/githubEditable"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconDrawable="@drawable/baseline_cancel_24"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@id/slack_IdLayout"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/education_IdLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gitHubEt_IdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/gituserName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/slack_IdLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/slackEditable"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconDrawable="@drawable/baseline_cancel_24"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/gitHub_IdLayout"
                app:layout_constraintTop_toBottomOf="@+id/education_IdLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/slack_IdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/userName" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_IdLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/locationEditable"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gitHub_IdLayout"
                app:startIconCheckable="false"
                app:startIconDrawable="@drawable/baseline_location_on_24"
                app:startIconTint="#C62525">

                <AutoCompleteTextView
                    android:id="@+id/location_IdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/location" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bio_IdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/inter_semibold"
                android:hint="@string/BioEditable"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconDrawable="@drawable/baseline_cancel_24"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_IdLayout"
                app:startIconCheckable="false"
                app:startIconDrawable="@drawable/baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bio_IdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@string/about" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>


